# openshift-python-wrapper

./: .coderabbit.yaml  .dockerignore  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .release-it.json  .sonarcloud.properties  .travis.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  OWNERS  README.md  VERSION  a  cliff.toml  conf.py  file1  in-solidarity.yml  networkmap.py  pyproject.toml  release.sh  renovate.json  requirements.txt  setup.cfg  setup.py  sonar-project.properties  stdci.yaml  storagemap.py  test_cluster.py  test_dummy.py  tox.ini  tox.toml
.github/: auto_assign.yml  in-solidarity.yml  label-actions-config.yml  mergeable.yml  pr-labeler.yml  pull_request_template.md  reviewers-auto-assign.yml  reviewers.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/_old/: reviewers.yml
.github/workflows/: add-reviewers.yml  block-merge-if-not-approved.yml  close-issue-from-pr.yml  close-stale-issues.yml  code-check.yml  code-check.yml.old  codeql-analysis.yml  create-auto-pr-for-merge-pr-in-main.yml  create-auto-pr-for-merge-pr-in-main.yml.bak  dummy.yml  enforce-labels.yml  issue-comment.yml  issue-comment.yml.bak  issue-from-pr.yml  issue_labeler.yaml  label-actions.yml  merge-status-label.yml.bak  offensive_language_actions.yml  pr-actions.yml  pr-size.yml  pr_actions.yml  publish-to-pypi.yml  python-package.yml  reviewers-auto-assign-action.yml  reviewers_action.yml  size_labeler.yml  sonarcloud.yml  stats.yml  sync-from-main.yml  sync-main.yml  sync-to-main.yml  tox-test.yml  upload-to-pypi.yml  upload-to-pypi.yml.bak
.gitlab/merge_request_templates/: template.md
automation/: check-patch.packages  check-patch.repos  check-patch.sh
class_generator/: README.md  class_generator.py  cli.py  constants.py  exceptions.py  utils.py
class_generator/core/: coverage.py  discovery.py  generator.py  schema.py
class_generator/formatters/: file_writer.py  template_renderer.py
class_generator/parsers/: type_parser.py  (+2 more)
docs/: Makefile  class-generator-cli.html  class-generator-cli.md  common-patterns.html  common-patterns.md  conf.py  connecting-to-clusters.html  connecting-to-clusters.md  creating-and-managing-resources.html  creating-and-managing-resources.md  editing-resources-temporarily.html  editing-resources-temporarily.md  environment-variables.html  environment-variables.md  error-handling.html  error-handling.md  generating-resource-classes.html  generating-resource-classes.md  index.html  index.md  index.rst  llms-full.txt  llms.txt  managing-resource-lists.html  managing-resource-lists.md  mcp-server-integration.html  mcp-server-integration.md  modules.rst  pod-execution-and-logs.html  pod-execution-and-logs.md  querying-resources.html  querying-resources.md  quickstart.html  quickstart.md  resource-api.html  resource-api.md  resource-class-hierarchy.html  resource-class-hierarchy.md  schema-validation-internals.html  schema-validation-internals.md  (+11 more)
examples/: general.py  node_network_configuration_policy.py  pods.py  resource_list.py  role.py  special_cases.py  validation_demo.py  validation_troubleshooting.py  virtual_machine.py
fake_kubernetes_client/: README.md  __init__.py  configuration.py  dynamic_client.py  exceptions.py  fake_dynamic_client.py  kubernetes_client.py  resource_field.py  resource_instance.py  resource_manager.py  resource_registry.py  resource_storage.py  status_schema_parser.py  status_templates.py  types.py
manifests/: class_generator_template.j2
mcp_server/: README.md  __init__.py  diagnose_cursor.md  example_client.py  launch.sh  server-info.json  server.py  test_server.py
ocp_resources/: NetworkMap.py  Plan.py  Provider.py  _hook_generated.py  aaq.py  api_request_count.py  api_server.py  api_service.py  application_aware_applied_cluster_resource_quota.py  application_aware_cluster_resource_quota.py  application_aware_resource_quota.py  authentication_config_openshift_io.py  authentication_operator_openshift_io.py  authorino.py  backup.py  backup_postgresql_cnpg_noobaa_io.py  backup_velero_io.py  benchmark.py  bgp_session_state.py  catalog_source.py  catalog_source_config.py  cdi.py  cdi_config.py  chaos_engine.py  chaos_result.py  cluster_claim.py  cluster_deployment.py  cluster_operator.py  cluster_policy.py  cluster_pool.py  cluster_resource_quota.py  cluster_role.py  cluster_role_binding.py  cluster_service_version.py  cluster_user_defined_network.py  cluster_version.py  config_imageregistry_operator_openshift_io.py  config_map.py  config_operator_openshift_io.py  config_samples_operator_openshift_io.py  (+262 more)
resources/: api_service.py  catalog_source.py  catalog_source_config.py  cdi.py  cdi_config.py  chaos_engine.py  cluster_operator.py  cluster_role.py  cluster_role_binding.py  cluster_service_version.py  cluster_version.py  configmap.py  console_cli_download.py  custom_resource_definition.py  daemonset.py  datavolume.py  deployment.py  event.py  hostpath_provisioner.py  hyperconverged.py  image_content_source_policy.py  imagestreamtag.py  installplan.py  kubevirt.py  kubevirt_common_templates_bundle.py  kubevirt_metrics_aggregation.py  kubevirt_node_labeller_bundle.py  kubevirt_template_validaotr.py  machine.py  machine_config_pool.py  machine_health_check.py  migration.py  mutating_webhook_config.py  namespace.py  network.py  network_addons_config.py  network_attachment_definition.py  network_policy.py  node.py  node_maintenance.py  (+39 more)
scripts/: class_resource_generator.py  diff-from-latest-release.sh  diff-from-tag.sh  generate-changelog.py  generate_changelog.py  get-latest-release.sh  k3d-runner.sh  release.sh
test_utils/: fake_dynamic_client.py
tests/: conftest.py  pytest.ini  test_api_group_order.py  test_camelcase_to_snake.py  test_daemonset.py  test_mtv.py  test_replace_key_with_hashed_value.py  test_resource.py  test_resource_validation.py  test_resources.py  test_schema_loading.py  test_unittests.py  test_utils.py  test_validate_resources.py  test_validate_resources_script.py  test_validation_error.py  utils.py
(+2960 files in other folders)
