[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.mypy]
# TODO: enable all once we have typing in all the resources.
# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[tool.poetry]
name = "openshift-python-wrapper"
version = "0.0.0"
description = "Wrapper around https://github.com/kubernetes-client/python"
authors = ["Meni Yakove <myakove@gmail.com>", "Ruth Netser <rnetser@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "ocp_resources" }]
homepage = "https://github.com/RedHatQE/openshift-python-wrapper"
documentation = "https://openshift-python-wrapper.readthedocs.io/en/latest/"
keywords = ["Openshift", "Kubevirt", "Openshift Virtualization"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[tool.poetry.urls]
Download = "https://pypi.org/project/openshift-python-wrapper/"
"Bug Tracker" = "https://github.com/RedHatQE/openshift-python-wrapper/issues"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"


[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"
requests = "^2.31.0"
deepdiff = "^7.0.1"

[tool.poetry-dynamic-versioning.substitution]
files = ["VERSION"]

[tool.poetry-dynamic-versioning]
enable = true
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "^0.13.0"
colorlog = "^6.7.0"
kubernetes = "^30.0.0"
python-benedict = "^0.33.0"
packaging = "^23.1"
python-simple-logger = ">=1.0.6"
jinja2 = "^3.1.2"
timeout-sampler = ">=0.0.17"
click = "^8.1.7"
pyhelper-utils = "^0.0.29"
ruff = "^0.5.3"
