[tool.pytest.ini_options]
markers = [
  "incremental: Mark tests as incremental",
  "kubevirt: Mark tests as kubevirt tests"
]

[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

  [tool.ruff.format]
  exclude = [ ".git", ".venv", ".mypy_cache", ".tox", "__pycache__" ]

[tool.mypy]
no_implicit_optional = true
show_error_codes = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = [ "ocp_resources", "class_generator" ]

[tool.uv]
dev-dependencies = [ "ipdb>=0.13.13", "ipython>=8.12.3" ]

[project]
requires-python = ">=3.8"
name = "openshift-python-wrapper"
version = "10.0.107"
description = "Wrapper around https://github.com/kubernetes-client/python"
readme = "README.md"
license = "Apache-2.0"
keywords = [ "Openshift", "Kubevirt", "Openshift Virtualization" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "click>=8.1.7",
  "cloup>=3.0.5",
  "colorlog>=6.8.2",
  "deepdiff>=8.0.1",
  "jinja2>=3.1.4",
  "kubernetes>=31.0.0",
  "packaging>=24.1",
  "pyhelper-utils>=0.0.42",
  "pytest>=8.3.3",
  "python-benedict>=0.33.2",
  "python-simple-logger>=1.0.40",
  "requests>=2.32.3",
  "rich>=13.9.2",
  "ruff>=0.6.9",
  "timeout-sampler>=0.0.46",
  "xmltodict>=0.13.0"
]

  [[project.authors]]
  name = "Meni Yakove"
  email = "myakove@gmail.com"

  [[project.authors]]
  name = "Ruth Netser"
  email = "rnetser@gmail.com"

  [[project.maintainers]]
  name = "Meni Yakove"
  email = "myakove@gmail.com"

  [[project.maintainers]]
  name = "Ruth Netser"
  email = "rnetser@gmail.com"

  [project.urls]
  homepage = "https://github.com/RedHatQE/openshift-python-wrapper"
  documentation = "https://openshift-python-wrapper.readthedocs.io/en/latest/"
  Download = "https://pypi.org/project/openshift-python-wrapper/"
  "Bug Tracker" = "https://github.com/RedHatQE/openshift-python-wrapper/issues"

  [project.scripts]
  class-generator = "class_generator.class_generator:main"

[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"
