[metadata]
name = openshift-python-wrapper
version = 2.1.10
author = Meni Yakove, Ruth Netser
author_email = myakove@redhat.com
description = Wrapper around https://github.com/openshift/openshift-restclient-python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RedHatQE/openshift-python-wrapper
download_url = https://github.com/RedHatQE/openshift-python-wrapper/archive/refs/tags/v2.1.10.tar.gz

project_urls =
    Bug Tracker = https://github.com/RedHatQE/openshift-python-wrapper/issues
    Documentation = https://openshift-python-wrapper.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
