[metadata]
name = openshift-python-wrapper
version = 4.8.5.68
author = Meni Yakove, Ruth Netser
author_email = myakove@redhat.com
description = Wrapper around https://github.com/openshift/openshift-restclient-python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RedHatQE/openshift-python-wrapper
download_url = https://github.com/RedHatQE/openshift-python-wrapper/archive/refs/tags/v4.8.5.68.tar.gz

project_urls =
    Bug Tracker = https://github.com/RedHatQE/openshift-python-wrapper/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
